--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "apollo-datasource-rest": "^0.8.0",
     "apollo-server": "^2.11.0",
     "dotenv": "^8.2.0"
+  },
+  "scripts": {
+    "docker:build": "docker build -t iurypiva/marvel-graphql .",
+    "docker:run": "docker run -p 4000:4000 -d iurypiva/marvel-graphql"
   }
 }
